<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient2"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/log_linBackground"
        android:layout_width="338dp"
        android:layout_height="640dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/log_imgIcon"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            app:srcCompat="@drawable/circleicon" />

        <TextView
            android:id="@+id/log_tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/doppio_one"
            android:text="@string/tvAceder"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/log_linEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/log_tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/etLoginEmail"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/log_etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/doppio_one"
                    android:textColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_linPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/log_tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/etLoginPassword"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/log_etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/doppio_one"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textCursorDrawable="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_linNovaPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_tvNovaPassword"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/doppio_one"
                android:text="@string/tvNovaPassword"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/log_swLembrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/doppio_one"
                android:text="@string/swLembrar"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_linBtLogin"
            android:layout_width="338dp"
            android:layout_height="366dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/log_btLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="275dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/doppio_one"
                android:text="@string/btEntrar"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/log_tvContaNao"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/doppio_one"
                android:text="@string/tvContaNao"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>